data/derived/comb/progs/unify/prog1021.ml.out
Characters 456-459:
  in max' (0.0-1.0) (min 1.0 (2.71 ** ((sin (pi *. eval (a, x, y))) +. (cos (pi *. eval(b, x, y))) -. 1.0) -. 1.0))
           ^^^
Error: This expression has type float but an expression was expected of type
         int
